# inboxmax

./: .env.example  .gitignore  README.md
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  api.js  index.css
client/src/components/: ConnectAccount.jsx  DayGroup.jsx  EmailList.jsx  EmailReader.jsx  EmailReader.test.jsx  EmailRow.jsx  LandingPage.jsx  Layout.jsx  LoginScreen.jsx  RegisterScreen.jsx  RememberedList.jsx  SearchBox.jsx  SidePanel.jsx  SignInScreen.jsx
client/src/hooks/: useEmails.js  useEmails.test.js  useRemembered.js
client/src/utils/: dates.js
e2e/: package-lock.json  package.json  playwright.config.js
e2e/tests/: auth-flow.spec.js  branding.spec.js  landing.spec.js  register.spec.js  signin.spec.js  take-screenshots.spec.js
server/: Cargo.toml
server/migrations/: 001_init.sql  002_users.sql  003_watermark.sql
server/src/: config.rs  db.rs  error.rs  imap_client.rs  lib.rs  main.rs  session.rs  smtp_client.rs
server/src/handlers/: auth.rs  emails.rs  mod.rs  remembered.rs
server/tests/: emails.rs
