[package]
name = "inboxmax-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# IMAP
async-imap = "0.10"
async-native-tls = "0.5"
imap-proto = "0.16"
tokio-util = { version = "0.7", features = ["compat"] }

# SMTP
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder"] }

# Email parsing
mail-parser = "0.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Password hashing
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }

# Time (for cookie max_age)
time = "0.3"

# Misc
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"

[dev-dependencies]
http-body-util = "0.1"
